[tool.poetry]
name = "neural-captcha-buster"
version = "0.1.0"
description = "An AWS Lambda for guessing CAPTCHAs using a deep neural network written in Python"
authors = ["Joe Love <git@joelove.uk>"]

[tool.poetry.dependencies]
python = "^3.7.2"
numpy = "^1.16"
opencv-python = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
